[NOBTS] Reduce code duplication